--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -1,15 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-// TAILWIND
+// Personnal styles
+@use 'styles/variables';
+@use 'styles/mixins';
+@use 'styles/notification';
 
+// TAILWIND
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-// Personnal styles
-@import 'main';
-@import 'variables';
-@import 'mixins';
-@import 'notification';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
